public/css/main.css
/* ... */
.note {
    color: red;
    font-size: .9em;
    font-weight: normal;
    margin: 1em 0;
}
.submit .comment-count,
.contact .comment-count {
    display: none;
}
.errors > li {
    color: red;
    font-weight: bold;
    font-size: 1.05em;
}

/* * * * * * * * * * * * * * * * * * * * *
        HEADER
* * * * * * * * * * * * * * * * * * * * * */
header {
    border-bottom: 4px solid #CAC8AD;
    min-height: 100px;
}

.header-wrapper {
    border-bottom: 1px solid #555;
    margin-bottom: 4px;
}

.header-wrapper a.logo-link {
    color: #000;
}

header .logo {
    border: 8px solid #fe0000;
    display: inline-block;
    float: left;
	height: 48px;
	margin: 20px;
	width: 48px;
}
header .headline-wrapper {
    display: inline-block;
    margin-top: 15px;
}
header h1 {
	font-size: 1.5em;
    margin: .5em 0 0;
    text-align: center;
}
header h2 {
    border-bottom: none;
    font-size: .85em;
    margin-top: 0;
    padding: 0;
    text-align: center;
    font-style: italic;
}

#mini-menu {
	font-size: .85em;
    padding: 3%;
}
.show-menu {
    cursor: pointer;
    font-family: Arial, sans-serif;
    position: relative;
    padding-left: 2em;
    text-transform: uppercase;
    top: 4px;
}
.show-menu:before {
    content: "";
    position: absolute;
    left: 0;
    width: 1.5em;
    height: 0.25em;
    border-top: 0.75em double #000;
    border-bottom: 0.25em solid #000;
}
.show-search {
    background: url('../img/search-black.png') 60px 7px no-repeat;
    cursor: pointer;
    font-family: Arial, sans-serif;
    left: 40%;
    margin: 0 auto;
    padding-top: 5px;
    padding-right: 1.5em;
    position: absolute;
    text-transform: uppercase;
}
.bottom-only {
    display: none;
}

#mini-menu > ul {
    font-family: Arial, sans-serif;
    list-style: none;
    margin: 0;
    padding: 0;
}

#mini-menu li {
    display: inline-block;
    vertical-align: top;
}

#mini-menu div li {
    border-right: 1px solid;
    margin-right: 5px;
    padding-right: 5px;
}

#mini-menu div li:first-of-type {
    border-right: none;
}

#mini-menu div {
    float: right;
}

/* * * * * * * * * * * * * * * * * * * * *
        NAV
* * * * * * * * * * * * * * * * * * * * * */
nav {
    background-color: #fff;
	box-shadow: 0 0 5px 0 #ccc;
	display: none;
	font-size: .95em;
    margin: 0 0 0 1em;
    position: absolute;
    top: 180px;
    width: 130px;
    z-index: 199;
}

nav .close {
	display: inline-block;
}

nav .desktop {
    display:none;
}

nav .mobile {
    background: url('../img/open-close.png') 120px 1px scroll no-repeat;
    display:block;
}

#support + nav {
    display: none;
}

nav li {
    position: relative;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;
}
nav li a, nav li a:visited {
    color: #333;
}
nav li a:hover,
nav li a.active {
    color: #333;
    font-weight: bold;
    padding: 2%;
}

nav ul li {
    border: 1px solid #c0c0c0;
    border-top: none;
    padding: 5px 0 5px 5px;
    position: static;
    text-align: left;
}

nav ul li:first-of-type {
    border-top: 1px solid #c0c0c0;
}

nav ul ul {
    background-color: #fcfeb3;
	box-shadow: 2px 0 3px -1px #ccc;
    display: none;
    position:absolute;
    text-align: left;
    top: 0;
    left: 129px;
    margin: 0;
    padding: 0;
    width: 150px;
}

nav ul ul li {
    text-transform: none;
}


#mini-menu li.account, #mini-menu li.sign-in, #mini-menu li.sign-out, #mini-menu li.sign-up {
    float: right;
}

#mini-menu li.sign-in, #mini-menu li.sign-out {
    margin-right: .5em;
}
#mini-menu #search fieldset {
    display: none;
}
#mini-menu #search {
    margin-top: 1em;
    width: 100%;
}
#mini-menu #search input {
    display: inline-block;
}
#mini-menu #search input[type="search"] {
    padding: .5em 0;
    width: 100%;
}
#mini-menu #search input[type="submit"] {
    background: #555;
    border: 1px solid #555;
    border-radius: 2px;
    color: #fff;
    margin-right: 2%;
    padding: .5em;
    text-transform: uppercase;
    width: 20%;
}

.sub-nav {
    margin-bottom: .5em;
    padding: 0;
    width: 100%;
}

.about .sub-nav, .account .sub-nav, .submit .sub-nav, .blog .sub-nav, .notices .sub-nav, .news .sub-nav, .media .sub-nav {
    margin-top: 0;
}

.sub-nav:empty {
    display: none;
}

.letters .sub-nav {
    padding-top: 0;
}
.sub-nav h3 {
    font-family: Arial, sans-serif;
    font-size: .75em;
    font-weight: normal;
    margin-bottom: 2em;
}

.sub-nav h5, .my-content > a {
    background: url('../img/right-arrow.png') no-repeat scroll 6px 8px;
    border: 1px solid #ccc;
    border-bottom: none;
    font-size: .9em;
    font-weight: normal;
    text-transform: uppercase;
}

.sub-nav h5:last-of-type, .my-content > a:last-of-type {
    border-bottom: 1px solid #ccc;
}

h3.my-content {
    font-size: .95em;
}
.sub-nav h5.active, .my-content a.active {
    background: url('../img/down-arrow.png') no-repeat scroll 6px 8px;
    font-weight: bold;
    padding: 5px 0 5px 25px;
}

.filter a, .sub-nav a, .sub-nav a:visited {
    color: #000;
}
.filter a:hover, .sub-nav a:hover {
    font-weight: bold;
}
.filter > h4, .sub-nav > h4 {
    display: none;
}
.sub-nav h5, .sub-nav .filter h5, .my-content > a {
    color: #000;
    display: block;
    padding: 5px 0 5px 25px;
}
.sub-nav h5:hover, .sub-nav .filter h5:hover, .my-content > a:hover {
    font-weight: bold;
    text-decoration: underline;
}
.sub-nav h5.active a {
    padding: 0;
}

.filter ul > li.group-label {
    border-left: none;
    border-right: none;
    border-top: none;
    font-weight: bold;
    margin-top: 2px;
}
.filter ul > li:first-of-type {
    border: none;
}
.filter li:nth-of-type(2) {
    border-top: 1px solid #d2def4;

}
.filter ul > li label {
    vertical-align: middle;
    width: 90%;
}
.my-content {
	margin: 0 0 1em;
}

.sub-nav > .filter {
    padding: 0;
}
.sub-nav > .filter h5 {
      margin: .25em 0;
}
/* ... */

